# buildinged

./: Textures.txt  TileShapes.txt  Tilesets.txt  build-BuildingEd-Qt5-MSVC-2013-32bit.bat  build-BuildingEd-Qt5-MSVC-2013-64bit.bat  build-BuildingEd-Qt5.15.2-MSVC-2019-32bit.bat  build-BuildingEd-Qt5.15.2-MSVC-2019-64bit.bat  dist.tcl  tiled.pri  tiled.pro
src/: src.pro
src/libtiled/: CMakeLists.txt  isometricrenderer.cpp  libtiled.pro  map.h  mapobject.h  maprenderer.h  orthogonalrenderer.cpp  staggeredrenderer.cpp  tileset.h  zlevelrenderer.cpp  zlevelrenderer.h
src/qtlockedfile/: qtlockedfile.pro
src/qtsingleapplication/: qtlocalpeer.cpp  qtlocalpeer.h  qtsingleapplication.pri
src/tiled/: addtilesetsdialog.cpp  addtilesetsdialog.h  addtilesetsdialog.ui  bmpblender.cpp  languagemanager.cpp  main.cpp  mapcomposite.cpp  mapcomposite.h  mapimagemanager.cpp  mapmanager.cpp  newmapbinaryfile.cpp  newmapbinaryfile.h  preferences.cpp  preferences.h  propertiesdialog.cpp  propertiesdialog.h  propertiesmodel.cpp  resizedialog.cpp  texturemanager.cpp  texturemanager.h  textureunpacker.cpp  textureunpacker.h  tiled.pro  tiled.qrc  tiledapplication.cpp  tiledapplication.h  tiledeffile.cpp  tiledeffile.h  tilemetainfodialog.cpp  tilemetainfodialog.h  tilemetainfodialog.ui  tilemetainfomgr.cpp  tilemetainfomgr.h  tilesetmanager.cpp  tilesetmanager.h  tilesetstxtfile.cpp  tmxmapwriter.cpp  tmxmapwriter.h  utils.cpp  virtualtileset.cpp  (+5 more)
src/tiled/BuildingEditor/: BuildingFurniture.txt  BuildingTemplates.txt  BuildingTiles.txt  CMakeLists.txt  TMXConfig.txt  buildingdocument.cpp  buildingdocument.h  buildingdocumentmgr.cpp  buildingdocumentmgr.h  buildingeditor.qrc  buildingeditorwindow.cpp  buildingeditorwindow.h  buildingeditorwindow.ui  buildingfloor.cpp  buildingfloor.h  buildingfloorsdialog.cpp  buildingfloorsdialog.h  buildingfloorsdialog.ui  buildingfurnituredock.cpp  buildingfurnituredock.h  buildingisoview.cpp  buildingisoview.h  buildingkeyvaluesdialog.cpp  buildingkeyvaluesdialog.h  buildingkeyvaluesdialog.ui  buildinglayersdock.cpp  buildinglayersdock.h  buildinglayersdock.ui  buildingmap.cpp  buildingorthoview.cpp  buildingorthoview.h  buildingpreferences.cpp  buildingpreferences.h  buildingpreferencesdialog.cpp  buildingpreferencesdialog.h  buildingpreferencesdialog.ui  buildingpropertiesdialog.cpp  buildingpropertiesdialog.h  buildingpropertiesdialog.ui  buildingreader.h  (+72 more)
src/tiled/BuildingEditor/manual/: TileEditingMode.html  TilesDialog.html  Tools.html  index.html
src/tiled/BuildingEditor/utils/: hostosinfo.h  styledbar.h  stylehelper.cpp  stylehelper.h
src/tiled/images/22x22/: bmp-bucket.xcf  bmp-eraser.xcf  bmp-no-blend.xcf  bmp-rect.xcf  bmp-select.xcf  bmp-to-layers.xcf  bmp-tool.xcf  bmp-wand.xcf
src/zlib/: zlib.pro
